--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -134,7 +134,7 @@
                         </div>
                         <img src="img/portfolio/game.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div> 
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -144,17 +144,18 @@
                         </div>
                         <img src="img/portfolio/safe.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div> 
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
-                </div>
+                        </div> -->
+                    <!--    <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                    </a> 
+                </div> -->
+				
             </div>
         </div>
     </section>
@@ -170,10 +171,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I am sophomore at Notre Dame majoring in Mechanical Engineering and minoring in Computational Engineering. My main fields of interest include energy engineering, aeronautics, big data, and predictive computational methods.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Outside of my studies, I am a competitive distance runner and an avid sports fan. I also enjoy reading, golfing, and spending time with my friends and family. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="img/Resume1.pdf" class="btn btn-lg btn-outline">
@@ -246,7 +247,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>University of Notre Dame<br>Notre Dame, IN </p>
+                        <p>University of Notre Dame<br>Notre Dame, IN 46556</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
