--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/image.jpeg" alt="">
+                    <img class="img-responsive" src="img/propic.png" alt="">
                     <div class="intro-text">
                         <span class="name">Flannan Hehir</span>
                         <hr class="star-light">
