--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Flannan Hehir: Homepage</title>
+    <title>Flannan Hehir - Homepage</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -177,7 +177,7 @@
                     <p>Outside of my studies, I am a competitive distance runner and an avid sports fan. I also enjoy reading, golfing, and spending time with my friends and family. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="img/Resume1.pdf" class="btn btn-lg btn-outline">
+                    <a href="img/OnlineResume.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Resume
                     </a>
                 </div>
