--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                     <p>Outside of my studies, I am a competitive distance runner and an avid sports fan. I also enjoy reading, golfing, and spending time with my friends and family. </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+				<meta name="robots" content="noindex,nofollow/>
                     <a href="img/OnlineResume.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Resume
                     </a>
