--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-	<meta name="robots" content="noindex,nofollow/>
+	<meta name="google-site-verification" content="ULQt1bkypYlcbrl1WdWBMM0jVuN9Acon-yxpOCa8IIs" />
     <title>Flannan Hehir - Homepage</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
