--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
-
+	<meta name="google-site-verification" content="ULQt1bkypYlcbrl1WdWBMM0jVuN9Acon-yxpOCa8IIs" />
+	<meta name="robots" content="noarchive">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-	<meta name="google-site-verification" content="ULQt1bkypYlcbrl1WdWBMM0jVuN9Acon-yxpOCa8IIs" />
+	
     <title>Flannan Hehir - Homepage</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
