--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta name="google-site-verification" content="ULQt1bkypYlcbrl1WdWBMM0jVuN9Acon-yxpOCa8IIs" />
-	<meta name="robots" content="noarchive">
+	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW, noarchive">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
