--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am sophomore at Notre Dame majoring in Mechanical Engineering and minoring in Computational Engineering. My main fields of interest include energy engineering, aeronautics, big data, and predictive computational methods.</p>
+                    <p>I am junior at Notre Dame majoring in Mechanical Engineering and minoring in Computational Engineering. My main fields of interest include energy engineering, aeronautics, big data, and predictive computational methods.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Outside of my studies, I am a competitive distance runner and an avid sports fan. I also enjoy reading, golfing, and spending time with my friends and family. </p>
@@ -264,10 +264,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!--<div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div> -->
+
                 </div>
             </div>
         </div>
@@ -275,7 +272,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; flannan.me 2014
+                        Copyright &copy; flannan.me 2016
                     </div>
                 </div>
             </div>
