--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I am junior at Notre Dame majoring in Mechanical Engineering and minoring in Computational Engineering. My main fields of interest include energy engineering, aeronautics, big data, and predictive computational methods.</p>
+                    <p>I am junior at Notre Dame majoring in Mechanical Engineering and minoring in Computational Engineering. My main fields of interest include energy engineering, data anayltics, and predictive computational methods.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Outside of my studies, I am a competitive distance runner and an avid sports fan. I also enjoy reading, golfing, and spending time with my friends and family. </p>
