--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn1.iconfinder.com/data/icons/vehicles-roads-road-symbols/32/road-cone-512.png" class="img-responsive" alt="">
+                        <img src="img/Fraunhofer.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                  <div class="col-sm-4 portfolio-item">
@@ -336,10 +336,16 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Under Construction!</h2>
+                            <h2><I>Energiewiende</I> Research Project</h2>
                             <hr class="star-primary">
-                            <img src="http://static1.squarespace.com/static/508adb26e4b06993f6ab5cfb/508adb26e4b06993f6ab5d04/529cb90de4b0a6ba0e38fb4d/1386002702530/Blank+White+Square-Formatted.jpg" class="img-responsive img-centered" alt="">
-                            <p>Currently working on some things to fill this section</p>
+                            <img src="img/IMG_4811.jpg" class="img-responsive img-centered" alt="">
+                            <p>Upon receiving a grant from The Nanovic Institue of European Studies via Notre Dame, I journeyed to Germany to conduct a series of interviews and site tours focusing on 
+							the nation's energy infrastructure revolution. The trip included meetings with academic and professional personel in renewable energy across Munich, Kassel, Hanover, and Berlin.
+							<br> After returning to South Bend, I wrote an article •	Wrote article published on the Nanovic Institute’s website discussing an interdisciplinary array of topics including grid
+							interconnectivity, power storage, fundamental renewable technology, and economic/political impacts.
+							<br> Check out the article <a href="http://nanovic.nd.edu/news/student-spotlight-flannan-hehir/">here</a>!
+							</p>
+							
                             <!-- <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
