--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/cabin.png" class="img-responsive" alt="">
+                        <img src="img/Fraunhofer.JPG" class="img-responsive" alt="">
                     </a>
                 </div>
                  <div class="col-sm-4 portfolio-item">
@@ -338,11 +338,13 @@
                         <div class="modal-body">
                             <h2><I>Energiewiende</I> Research Project</h2>
                             <hr class="star-primary">
-                            <img src="img/IMG_4811.jpg" class="img-responsive img-centered" alt="">
+                            <img src="img/munich_river.JPG" class="img-responsive img-centered" alt="">
                             <p>Upon receiving a grant from The Nanovic Institue of European Studies via Notre Dame, I journeyed to Germany to conduct a series of interviews and site tours focusing on 
 							the nation's energy infrastructure revolution. The trip included meetings with academic and professional personel in renewable energy across Munich, Kassel, Hanover, and Berlin.
+							<p>  </p>
 							<br> After returning to South Bend, I wrote an article published on the Nanovic Institute’s website discussing an interdisciplinary array of topics including grid
 							interconnectivity, power storage, fundamental renewable technology, and economic/political impacts.
+							<p>  </p>
 							<br> Check out the article <a href="http://nanovic.nd.edu/news/student-spotlight-flannan-hehir/">here</a>!
 							</p>
 							
