--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/Fraunhofer.JPG" class="img-responsive" alt="">
+                        <img id="IWES" src="img/Fraunhofer.JPG" class="img-responsive" alt="" class="rotate90">
                     </a>
                 </div>
                  <div class="col-sm-4 portfolio-item">
