--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="http://static1.squarespace.com/static/508adb26e4b06993f6ab5cfb/508adb26e4b06993f6ab5d04/529cb90de4b0a6ba0e38fb4d/1386002702530/Blank+White+Square-Formatted.jpg" class="img-responsive" alt="">
+                        <img src="img/diagram.png" class="img-responsive" alt="">
                     </a>
                 </div>
 				
