--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <!-- <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -299,31 +299,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Counter Flow Heat Exchanger Design [May 2017]</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <p>For an undergraduate course in Heat Transfer, my partner and I designed a counter-flow heat exchanger to increase the thermal efficency of an internal cobustion engine (ICE).</p>
+							<p> </p>
+							<p>Since ICE's waste approximately 70% of its fuel energy through heat losses in the exhaust, our design utilized thermoeletric modules that convert heat to eletric power at a ~5% effiency rating. </p>
+							<p> </p>
+							<p>Read the report <a href="img/ExchangeReport.PDF">here</a>!</p>
+                         
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div> 
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -336,7 +327,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2><I>Energiewiende</I> Research Project</h2>
+                            <h2><I>Energiewiende</I> Research Project [January-April 2017]</h2>
                             <hr class="star-primary">
                             <img src="img/munich_river.JPG" class="img-responsive img-centered" alt="">
                             <p>Upon receiving a grant from The Nanovic Institue of European Studies via Notre Dame, I journeyed to Germany to conduct a series of interviews and site tours focusing on 
