--- a/index.html
+++ b/index.html
@@ -299,14 +299,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Counter Flow Heat Exchanger Design [May 2017]</h2>
+                            <h2>Counter-Flow Heat Exchanger Design [May 2017]</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/diagram2.png" class="img-responsive img-centered" alt="">
                             <p>For an undergraduate course in Heat Transfer, my partner and I designed a counter-flow heat exchanger to increase the thermal efficency of an internal cobustion engine (ICE).</p>
 							<p> </p>
 							<p>Since ICE's waste approximately 70% of its fuel energy through heat losses in the exhaust, our design utilized thermoeletric modules that convert heat to eletric power at a ~5% effiency rating. </p>
 							<p> </p>
-							<p>Read the report <a href="img/ExchangeReport.PDF">here</a>!</p>
+							<p>Read the report <a href="img/ExchangerReport.PDF">here</a>!</p>
                          
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
