--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 							<p> </p>
 							<p>Since ICE's waste approximately 70% of its fuel energy through heat losses in the exhaust, our design utilized thermoeletric modules that convert heat to eletric power at a ~5% effiency rating. </p>
 							<p> </p>
-							<p>Read the report <a href="img/ExchangerReport.PDF">here</a>!</p>
+							<p>Read the report <a href="img/ExchangerReport.pdf">here</a>!</p>
                          
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
