--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 							<p>MATLAB: [To be populated]</p>
 							<p>NEURON: [To be populated]</p>
 							<p>FORTRAN: [To be populated] </p>
+							<p href="https://github.com/fhehir"> GitHub <\p>
 							
                          
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
