--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/Headshot_9_17.png" alt="">
+                    <img class="img-responsive" src="img/Headshot_9_17.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">Flannan Hehir</span>
                         <hr class="star-light">
